--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
   },
   "dependencies": {
     "async": "^2.0.1",
-    "body-parser": "~1.15.1",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "express": "~4.13.4",
+    "debug": "^4.1.1",
+    "express": "^4.17.1",
     "moment": "^2.14.1",
     "mongodb": "^2.2.8",
-    "morgan": "~1.7.0",
+    "morgan": "^1.9.1",
     "pug": "^2.0.0-beta6",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "^2.5.0"
   }
 }
